# sweet-lab

./: .gitignore  readme.md
bevy_book/: Cargo.toml  flake.nix
bevy_book/src/: main.rs
elixir/: .gitignore
elixir/simple_queue/lib/simple_queue/: application.ex
hello_tokio/: Cargo.toml
hello_tokio/examples/: hello-redis.rs
helm/: flake.nix
helm/helm-tutorial/nginx-chart/: Chart.yaml
helm/nginx/: values.yaml
how_does_protobuf/: Cargo.toml
message_parsing_shared_state/src/: main.rs
react/: flake.nix  notes.org
react/keeptrack/: package-lock.json  package.json
react/keeptrack/src/: App.tsx
react/keeptrack/src/projects/: MockProjects.ts  (+5 more)
react/os-and-xes/: package-lock.json  package.json
react/os-and-xes/src/: App.tsx  main.tsx
react/tic-tac-toe/: package-lock.json
react/tic-tac-toe/src/: App.tsx
react/ticktactoe/src/: App.jsx
react/ticktactoe_bad/: package-lock.json
react/ticktactoe_bad/src/: App.jsx  index.js
react/todo/: package-lock.json  package.json
react/todo/src/: App.css  App.tsx
rumqtt/: Cargo.toml  flake.nix
rust/: .gitignore
rust/bevy_book/: Cargo.toml
rust/derivemore_from_test/: Cargo.toml
rust/derivemore_from_test/src/: main.rs
rust/hello_tokio/src/: main.rs
rust/how_does_protobuf/src/: main.rs
rust/macro_tests/: Cargo.toml
rust/message_parsing_shared_state/: Cargo.toml
rust/mutex_shared_state/: Cargo.toml
rust/mutex_shared_state/src/: main.rs
rust/pest-test/: Cargo.toml
rust/pest-test/src/: csv.pest  json.pest  main.rs
rust/rumqtt/src/: main.rs
rust/sqlx-migrations/: .env  Cargo.toml
rust/sqlx-migrations/migrations/: 20240405095739_northwind-init.sql  20240405104140_northwind-customers.sql  20240405104216_northwind-categories.sql
rust/sqlx-migrations/src/: main.rs
rust/tonic_hello_world/: flake.nix
rust/tonic_hello_world/src/: client.rs  server.rs
rust/tonic_routeguide/: build.rs
rust/tonic_routeguide/proto/: route_guide.proto
rust/tonic_type_mappings/: Cargo.toml  build.rs  flake.nix
rust/tonic_type_mappings/proto/: helloworld.proto
rust/tonic_type_mappings/proto_map/: Cargo.toml
rust/tonic_type_mappings/proto_map/src/: lib.rs
rust/tonic_type_mappings/src/: helloworld.rs  main.rs
tonic_hello_world/: Cargo.toml
tonic_hello_world/proto/: helloworld.proto
tonic_routeguide/: Cargo.toml  flake.nix
tonic_routeguide/src/: data.rs  defs.rs  server.rs
(+4 files in other folders)
