[package]
name = "sqlx-migrations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
histogram = "0.10.0"
log = "0.4.21"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-rustls", "postgres", "migrate"] }
tokio = { version = "1.37.0", features = ["full"] }
