[package]
name = "tonic_type_mappings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
proto_map = { path = "proto_map" }

[build-dependencies]
tonic-build = "0.9"
